# variationalsearch

./: .gitattributes  .gitignore  LICENSE.txt  README.md  abl_seq_exp_slurm.sh  all_seq_exp_slurm.sh  plot_all_results.sh  pyproject.toml  run_aav.sh  run_dhfr.sh  run_digits.sh  run_gfp.sh  run_seq_exp.sh  run_seq_exp_abl.sh  run_seq_exp_hpc.sh  run_tfbind10.sh  run_tfbind8.sh
data/: P42212.fasta
data/AAV/: FL_surrogate_training_data.csv  ground_truth.csv  surrogate_training_data.csv
data/AAV/mutations_0/percentile_0.0_1.0/: base_seqs.csv
data/AAV/mutations_0/percentile_0.5_0.6/: base_seqs.csv
data/AAV/mutations_6/percentile_0.2_0.4/: base_seqs.csv
data/AAV/mutations_7/percentile_0.1_0.3/: base_seqs.csv
data/DHFR/: DHFR_fitness_data_wt.csv  FL_surrogate_training_data.csv  surrogate_training_data.csv
data/GFP/: FL_surrogate_training_data.csv  amino_acid_genotypes_to_brightness.tsv  ground_truth.csv  surrogate_training_data.csv
data/GFP/mutations_0/percentile_0.0_1.0/: base_seqs.csv
data/GFP/mutations_0/percentile_0.5_0.6/: base_seqs.csv
data/GFP/mutations_6/percentile_0.2_0.4/: base_seqs.csv
data/GFP/mutations_7/percentile_0.1_0.3/: base_seqs.csv
data/TFBIND10/: surrogate_training_data.csv  tf_bind_10.csv  tf_bind_10_max.csv  tf_bind_10_mean.csv  tfbind10data-x.npy  tfbind10data-y.npy
data/TFBIND8/: FL_surrogate_training_data.csv  surrogate_training_data.csv  tf_bind_8-x-0.npy  tf_bind_8-y-0.npy  tf_bind_8.csv
data/TRPB/: FL_surrogate_training_data.csv  four-site_simplified_AA_data.csv  surrogate_training_data.csv
data/rfp_pdbs/: proxy_rfp_seed_data.csv  rfp_training_cache.csv
experiments/: batch_rounds.py  blackboxes.py  config.py  dataclasses.py  environments.py  methods.py  metrics.py  oracles.py  plot_results.py  train_dhfr_cpe.py  train_dhfr_surrogate.py  train_nucleotide_cpe.py  vis.py
experiments/ngrams/: base.py  ngram_regx.py  ngram_utils.py  observer_utils.py
experiments/scripts/: batch_rounds.py  digits.py  ehrlich.py  ehrlich_nat.py  foldx_ss.py  ngrams.py  plot_ehrlich.py  plot_moo_2d.py  plot_ngrams.py  plot_results.copy.py  plot_results.py  synfn_moo.py  train_aa_cpe.py  train_cpe.py  train_gp.py  train_nucleotide_cpe.py  train_prior.py
models/: AAV_FL_prior.pt  AAV_FL_surrogate.pt  AAV_prior.pt  AAV_prior_ar.pt  AAV_prior_lstm.pt  AAV_rnn_prior.pt  AAV_surrogate_cnn.pt  AAV_surrogate_gp.pt  AAV_tcnn_prior.pt  DHFR_FL_surrogate_gp.pt  DHFR_FL_surrogate_nn.pt  DHFR_surrogate_gp.pt  DHFR_surrogate_nn.pt  GFP_FL_prior.pt  GFP_FL_surrogate.pt  GFP_prior.pt  GFP_prior_ar.pt  GFP_prior_lstm.pt  GFP_surrogate_cnn.pt  GFP_surrogate_gp.pt  GFP_tcnn_prior.pt  TFBIND10_surrogate_nn.pt  TFBIND8_FL_surrogate_gp.pt  TFBIND8_FL_surrogate_nn.pt  TFBIND8_surrogate_gp.pt  TFBIND8_surrogate_nn.pt  TRPB_FL_surrogate_gp.pt  TRPB_FL_surrogate_nn.pt  TRPB_surrogate_nn.pt  aav_cnn_oracle.pt  gfp_cnn_oracle.pt
notebooks/: DHFR_data_look.ipynb  avGFP_data_look.ipynb  gmm_exploration_test.ipynb  moo_test.ipynb  synthetic_benchmark_ablation.ipynb  synthetic_benchmark_moo.ipynb
slurm/: all_ehrlich.sh  all_ehrlichnat.sh  all_foldx.sh  all_ngrams.sh  all_seq_exp.sh  all_synfn_moo.sh  run_digits.sh  run_ehrlich.sh  run_ehrlichnat.sh  run_foldx.sh  run_ngrams.sh  run_seq_exp.sh  run_synfn_moo.sh
tests/: conftest.py  test_condproposals.py  test_proposals.py  test_solvers.py  test_surrogates.py
vsd/: __init__.py  acquisition.py  augmentation.py  condproposals.py  config.py  cpe.py  generation.py  labellers.py  preferences.py  proposals.py  solvers.py  surrogates.py  thresholds.py  utils.py
